--- a/life/gtd.org
+++ b/life/gtd.org
@@ -33,3 +33,7 @@
       SCHEDULED: <2020-09-17 Thu>
 ***** TODO 补充 v656 2020-09-01-0916 模型分, 补充 20200807
 ***** 了解定价模型 
+*** 10
+**** week2
+***** TODO 监控反欺诈模型
+      SCHEDULED: <2020-10-11 日>
