--- a/wiki/业务知识.org
+++ b/wiki/业务知识.org
@@ -54,6 +54,7 @@
     - [[#模型组业务][模型组业务]]
       - [[#风险模型][风险模型]]
       - [[#营销模型][营销模型]]
+      - [[#资本资产定价模型][资本资产定价模型]]
     - [[#小米贷款][小米贷款]]
       - [[#重要指标][重要指标]]
         - [[#逾期率][逾期率]]
@@ -564,6 +565,32 @@ https://pic4.zhimg.com/v2-bb9d85757be46eae066820b12961c974_b.jpg
 
 **** 营销模型
 
+
+**** 资本资产定价模型
+
+所谓资本资产主要指的是股票资产，而定价则试图解释资本市场如何决定股票收益率，进而决定股票价格。
+
+根据资本资产定价模型，对于一个给定的资产 $i$, 它的期望报酬率和市场投资组合的期望报酬率之间的关系可以表示为：
+
+\[
+E(r_{i}) = r_{f} + \beta_{im} [E(r_{m}) - r_{f}]
+\]
+
+其中：
+
+- $E(r_{i})$ 是资产 $i$ 的期望报酬率（或普通股的资本成本率）
+
+- $r_{f}$ 是无风险报酬率，通常是短期国债的利率来近似替代
+
+- $\beta_{im}$ 是资产 $i$ 的系统性风险系数， $\beta_{im} = \frac{Cov(r_{i},r_{m})}{Var(r_{m})}$
+
+- $E(r_{m})$ 是市场投资组合 $m$ 的期望报酬率，通常用股票价格指数报酬率的平均值或所有股票的平均报酬率来代替
+
+- $E(r_{m}) - r_{f}$ 是市场风溢价，即市场投资组合的期望报酬率与无风险报酬率之差。
+
+从上述式子可以看出，资本定价和无风险报酬率以及系统性风险有关。
+
+
 *** 小米贷款
 **** 重要指标
 ***** 逾期率
@@ -634,22 +661,34 @@ https://pic4.zhimg.com/v2-bb9d85757be46eae066820b12961c974_b.jpg
    [[E:/我的坚果云/github/wiki/pic/小米贷款流程.png]]
 
    从这个小米贷款流程，可知：
-   1、获客。产业链的最上游是客户的来源渠道即产品渠道，有来自微信、小米金融、小米贷款、有品等。 2、授信导流。紧接着进行授信、导流操作，在授信中，一种是预授信（只有小米金融有）、另一种是申请制（包括芝麻渠道、同盾渠道、百融渠道）。导流中，主要导流到南京银行、贷款超市，这些都是申请失败后，导流至这些地方，发现恶心欺诈后是不允许进入到贷款超市的。
+
+1、获客。产业链的最上游是客户的来源渠道即产品渠道，有来自微信、小米金融、小米贷款、有品等。
+   2、授信导流。紧接着进行授信、导流操作，在授信中，一种是预授信（只有小米金融有）、另一种是申请制（包括芝麻渠道、同盾渠道、百融渠道）。导流中，主要导流到南京银行、贷款超市，这些都是申请失败后，导流至这些地方，发现恶心欺诈后是不允许进入到贷款超市的。
    3、授信认证。每个获客渠道的认证项是不同的，以芝麻渠道为例，需要芝麻授权，同盾渠道，需要安全手机等等。
    4、资金导流。授信通过后，其实就有资金的流动。主要包括表内资产、联合贷、助贷、导流资金、贷超资金等。
-   5、支用认证项。一些联合贷的机构，需要补充登记个人信息，包括职业信息、绑定卡等。
 
-    资金模式：
+5、支用认证项。一些联合贷的机构，需要补充登记个人信息，包括职业信息、绑定卡等。
+
+资金模式：
+
+联合贷双方均需出钱，助贷的话，小米提供技术支持。
+
+
 联合贷模式——双方按放款比例兜底。参加的银行有：新网银行、苏州银行、百信银行、民生银行。需要注意的是在联合贷中，在支用环节，需要依据资金方要求补充信息。
 
-    *银行助贷[fn:3]——资金方兜底：民生银行、新网银行* 说白了就是由这些民生银行、新网银行进行资金兜底，然后由小米提供风险控制，而且承担损失风险。
+*银行助贷[fn:3]——资金方兜底：民生银行、新网银行* 说白了就是由这些民生银行、新网银行进行资金兜底，然后由小米提供风险控制，而且承担损失风险。
 
-   自营模式（注册资本，借款，ABS)——自己兜底，自有资金：中航信托，ABS：航海信托等
-   导流资金：南京银行（说白了就是，当自营资金不足时，需要将人员导流到其他资金渠道。）
+自营模式（注册资本，借款，ABS)——自己兜底，自有资金：中航信托，ABS：航海信托等
+
+导流资金：南京银行（说白了就是，当自营资金不足时，需要将人员导流到其他资金渠道。）
    贷超资金：合作方资金（说白了就是小米不要的黑名单用户以及模型被拒用户，才会导入到合作方资金那里）
-   引入第三方担保（担保公司，保险公司）——担保公司兜底
+
+引入第三方担保（担保公司，保险公司）——担保公司兜底
 
 **** 贷款产品类型
+:PROPERTIES:
+:NOTER_DOCUMENT: python_wiki.org
+:END:
 
 | 产品类型     | 大额长期贷款 | 小额贷款     | 小米贷款           |
 | 目标人群分级 | A            | C-           | A/B/C+             |
