--- a/life/gtd.org
+++ b/life/gtd.org
@@ -32,8 +32,9 @@
 ***** STARTED 不看斗音(一定要认真执行！)
       SCHEDULED: <2020-09-17 Thu>
 ***** TODO 补充 v656 2020-09-01-0916 模型分, 补充 20200807
-***** 了解定价模型 
+***** 了解定价模型
 *** 10
 **** week2
 ***** TODO 监控反欺诈模型
       SCHEDULED: <2020-10-11 日>
+***** 研究美国股市消费走势 
