--- a/wiki/emacs-wiki.org
+++ b/wiki/emacs-wiki.org
@@ -58,6 +58,7 @@
       - [[#手动加词和删词][手动加词和删词]]
     - [[#color-rg][color-rg]]
     - [[#awesome-tab][awesome-tab]]
+    - [[#awesome-pair][awesome-pair]]
     - [[#pdf-tools][pdf-tools]]
     - [[#python][python]]
     - [[#emacs-rime][emacs-rime]]
@@ -284,7 +285,6 @@ ctrl + r
 这个插件可以很方便地将 emacs 中所以 key 全部清除，然后可以方便地添加新的 key。
 ** lispy
 这个插件做的事情就是 insert 状态下文本编辑状态。
-
 | key   | behavior            |
 | m-d   | lispy-kill-words    |
 | C-e   | lispy-move-end-line |
@@ -502,7 +502,8 @@ awesome-tab-kill-all-buffers-in-current-group	删除当前分组的所有标签
 awesome-tab-kill-match-buffers-in-current-group	删除当前分组的匹配的标签
 awesome-tab-keep-match-buffers-in-current-group	保留当前分组的匹配的标签
 awesome-tab-switch-group	基于模糊搜索算法切换不同的分组
-
+*** awesome-pair
+因为经常用到（）而 括号不好打，所以将它绑定到 C-q 键。
 *** pdf-tools
 
 看 pdf 神器！
@@ -538,7 +539,7 @@ ess 环境配置比较麻烦，主要要确认系统默认的 R version，这涉
   sessionInfo()
   #+END_SRC
 
-#  ov-highlight-data: ((14450 14496 (ov-highlight t face (:background "LightBlue"))))
+#  ov-highlight-data: ((14487 14533 (face (:background "LightBlue") ov-highlight t)))
 
 # Local Variables:
 # eval: (ov-highlight-load)
