--- a/wiki/统计.org
+++ b/wiki/统计.org
@@ -72,7 +72,6 @@
 
 ** 1 数学基础
 ** 标量\向量\矩阵\张量
-
 ** 2 概率论
 *** 贝叶斯定理
 
@@ -2465,7 +2464,7 @@ New=x+rand(0,1) \times (x_{i}-x),i=1,2,\cdots,N
 
 - 将新样本与原始数据合成，产生新的训练集
 
-[https://www.cnblogs.com/Determined22/p/5772538.html] 更多的信息可以从这里看到！
+https://www.cnblogs.com/Determined22/p/5772538.html 更多的信息可以从这里看到！
 
 ** 9 机器学习
 
@@ -2481,10 +2480,10 @@ https://zhuanlan.zhihu.com/p/58964140
 共有 3 层 layer,input layer, hidden layer, softmax layer(为了将上一层输出映射成
 （0,1）)。
 
-[https://pic1.zhimg.com/v2-6fac69d2abab24639943ebaab0b70bde_b.jpg]
+https://pic1.zhimg.com/v2-6fac69d2abab24639943ebaab0b70bde_b.jpg
 
 上面还有点复杂，来点简单的。
-[https://pic1.zhimg.com/v2-7ee8cabcbd707dd4deab7155af2ba4cd_b.jpg]
+https://pic1.zhimg.com/v2-7ee8cabcbd707dd4deab7155af2ba4cd_b.jpg
 
 1.1.输入层
 
@@ -2515,7 +2514,7 @@ $$
 
 简而言之，激活层是为矩阵运算的结果添加非线性的。常用的激活函数有三种，分别是阶跃函数、Sigmoid 和 ReLU。不要被奇怪的函数名吓到，其实它们的形式都很简单，如下图（更正：sigmoid 在负无穷是应趋近于 0）：
 
-[https://pic4.zhimg.com/v2-3c50daffa0cf4238bd96aaad69ffaec7_b.jpg]
+https://pic4.zhimg.com/v2-3c50daffa0cf4238bd96aaad69ffaec7_b.jpg
 
 激活函数具体是怎么计算的呢？
 
@@ -2930,9 +2929,6 @@ a #特征值
 b #特征向量
 c
 #+end_src
-
-** 因子分解机
-
 
 ** svm
 概述：svm 是一种二分类模型，定义在特征空间上的间隔最大的线性分类器，核技巧使它成
@@ -3593,39 +3589,164 @@ y_pred
 #+end_src
 
 ** CNN(convolutional neural network)
-卷积神经网络，利用卷积运算对图片进行特征提取，再经过 Relu, pooling 等过程进一步实
-现图像信息的有效提取，从而达到图片特征信息提取的作用，最后经过全连接也就是通常所
+
+卷积神经网络，利用卷积运算对图片进行特征提取，再经过 Relu, pooling 等过程进一步实现图像信息的有效提取，从而达到图片特征信息提取的作用，最后经过全连接也就是通常所
 说的 NN 中的 softmax 算法实现对图片分类目的。
 
-深度学习模型是一种表示学习（representation learning），能够学到数据更高层次的抽
-象表示，能够自动从数据中提取特征。
+深度学习模型是一种表示学习（representation learning），能够学到数据更高层次的抽象表示，能够自动从数据中提取特征。
 
-一个简单的卷积神经网络是由各种层按照顺序排列组成，网络中的每一层使用一个可微分的
-函数将数据从一层传递到下一层，卷积神经网络主要由三种类型的层构成：卷积层，池化层
+一个简单的卷积神经网络是由各种层按照顺序排列组成，网络中的每一层使用一个可微分的函数将数据从一层传递到下一层，卷积神经网络主要由三种类型的层构成：卷积层，池化层
 和全连接层。
 
 卷积是一种线性的\平移不变性的运算。
 
-1.卷积：首先需要有 feature,也就是卷积核（filter，一般是 3*3,5*5 大小）（问题：如
-何找到这卷积核？从训练集中提取，如果是找人，那么一定有鼻子\眼睛\嘴），然后与目标
+1.卷积：首先需要有 feature,也就是卷积核（filter，一般是 3*3,5*5 大小）（问题：如何找到这卷积核？从训练集中提取，如果是找人，那么一定有鼻子\眼睛\嘴），然后与目标
 图片作卷积运算。
 
 2.Relu 层（非线性激活层）。卷积后产生的特征图中的值，越靠近 1 表示与该特征越关联，越靠近-1 表示越不关联，而我们进行特征提取时，为了使得数据更少，操作更方便，就直接舍弃掉那些不相关联的数据。
 
 3.pooling 池化层。进一步缩减图片大小。
 
-
-
-
 *** Resnet
-深度残差网络（deep residual network, Resnet）。深度学习模型很难训练，存在梯度消
-失或爆炸问题。batchnorm 可以解决这个问题。
+
+    深度残差网络（deep residual network, Resnet）。深度学习模型很难训练，存在梯度消失或爆炸问题。batchnorm 可以解决这个问题。
+
+一种方法的提出，首先需要问“这个方法解决了什么问题？”
+
+ResNet 解决了深度CNN 模型难训练的问题。如何解决？
+
+
+
+
+
+
+
+
+
+
+*** RNN (循环神经网络)
+
+    通常意义上的神经网络都只能单独的取处理一个个的输入，前一个输入和后一个输入是完全没有关系。但是，某些任务需要能够更好的处理序列的信息，即前面的输入和后面的输入的有关系的。
+
+RNN 与 CNN 的关键区别在于，它是一个序列的神经网络，即前一
+
+https://pic4.zhimg.com/80/v2-28d17fdfecc6f6353666fc97cb09b1df_720w.jpg
+
+一般认为，RNN结构由输入层、隐藏层、输出层构成。
+
+https://pic4.zhimg.com/80/v2-3884f344d71e92d70ec3c44d2795141f_1440w.jpg
+
+我们现在这样来理解，如果把上面有W的那个带箭头的圈去掉，它就变成了最普通的全连接神经网络。
+
+x是一个向量，它表示输入层的值（这里面没有画出来表示神经元节点的圆圈）；s是一个向量，它表示隐藏层的值（这里隐藏层面画了一个节点，你也可以想象这一层其实是多个节点，节点数与向量s的维度相同）；
+
+U是输入层到隐藏层的权重矩阵，o也是一个向量，它表示输出层的值；V是隐藏层到输出层的权重矩阵。
+
+那么，现在我们来看看W是什么。循环神经网络的隐藏层的值s不仅仅取决于当前这次的输入x，还取决于上一次隐藏层的值s。权重矩阵 W就是隐藏层上一次的值作为这一次的输入的权重。
+
+其中，这个就有点像时间序列的意思。
+
+https://pic1.zhimg.com/80/v2-206db7ba9d32a80ff56b6cc988a62440_1440w.jpg
+
+从上图可以很清晰地看出，上一时刻的隐藏层是如何影响当前时刻的隐藏层。
+
+用公式表示如下：
+
+\[
+O_{t} = g(V \dot S_{t})
+
+S_{t} = f(U \dot X_{t} + W \dot S_{t-1})
+\]
+
+$S_{t}$ 的值不仅仅取决于 $X_{t}$, 还取决于 $S_{t-1}$.
+*** LSTM
+
+长短期记忆（long short-term memory,lstm） 是一种特殊的RNN, 主要是为了解决长序列训练过程中的梯度消失和梯度爆炸问题。简单来说，就是相比普通的RNN，LSTM 能够在更长的序列中有更好的表现。
+
+https://pic4.zhimg.com/80/v2-e4f9851cad426dfe4ab1c76209546827_720w.jpg
+
+相比RNN 只有一个传递状态 $h^{t}$, LSTM 有 2 个传递状态，一个 $c^{t}$(cell state),和一个 $h^{t}$(hidden state).
+
+其中，对于传递下去的 $c^{t}$ 改变得很慢，通常输出的 $c^{t}$ 是上一个状态传过来的 $c^{t-1}$ 加上一些数值。而 $h^{t}$ 则在不同节点下往往会有很大的区别。
+
+RNN 中的 $h^{t}$ 对于LSTM 中的 $c^{t}$.
+
+简单地说，LSTM 内部主要有三个阶段：
+
+1.忘记阶段。这个阶段主要是对上一个节点传进来的输入进行选择性忘记。简单来说就是会“忘记不重要的，记住重要的”。具体来说是通过计算得到的 $z^{f}$ 来作为忘记门控，来控制上一个
+状态的 $c^{t-1}$ 哪些需要留哪些需要忘。
+
+2.选择记忆阶段。这个阶段将这个阶段的输入有选择性进行“记忆”。主要是会对输入 $x^{t}$ 进行选择记忆。哪些重要则着重记录下来，哪些不重要，则少记一些。当前的输入内容由前面计算得到的 $z$ 表示，而选择的门控信号则是由 $z^{i}$ 来控制。
+
+将上面两步得到的结果相加，即可得到传输给下一个状态的 $c^{t}$.
+
+3.输出阶段。这个阶段将决定哪些将会被当成当前状态的输出。主要是通过 $z^{o}$ 来进行控制的，并且还对上一阶段得到的 $c^{o}$ 进行了防缩（通过一个tanh 激活函数进行变化）。
+
+
+
+*** HMM
+啥叫隐马尔可夫模型？
+隐马尔可夫模型，一定存在马尔可夫链，该马尔可夫链服从马尔可夫性质：无记忆性。也就是说，这一时刻的状态，受且只受前一时刻的影响，而不受更前往时刻的状态的影响。
+
+在这个马尔可夫模型中，存在三个状态，sunny,rainy,cloudy,既是隐形，说明这些状态是观测不到的，相应的，我们可以通过其他方式来“猜测” 或 “推断” 这些状态，这也是 HMM 需要解决的问题。
+
+example:
+
+举个例子，我女朋友现在在北京工作，而我还在法国读书。每天下班之后，她会根据天气情况有相应的活动：或是去商场购物，或是去公园散步，或是回家收拾房间。我们有时候会通电话，她会告诉我她这几天做了什么，而闲着没事的我呢，则要通过她的行为猜测这几天对应的天气最有可能是什么样子的。
+
+以上就是一个简单的HMM，天气状况属于状态序列，而她的行为则属于观测序列。天气状况的转换是一个马尔可夫序列。而根据天气的不同，有相对应的概率产生不同的行为。在这里，为了简化，把天气情况简单归结为晴天和雨天两种情况。雨天，她选择去散步，购物，收拾的概率分别是0.1，0.4，0.5，而如果是晴天，她选择去散步，购物，收拾的概率分别是0.6，0.3，0.1。而天气的转换情况如下：这一天下雨，则下一天依然下雨的概率是0.7，而转换成晴天的概率是0.3；这一天是晴天，则下一天依然是晴天的概率是0.6，而转换成雨天的概率是0.4. 同时还存在一个初始概率，也就是第一天下雨的概率是0.6， 晴天的概率是0.4.
+
+根据以上的信息，我们得到了 HMM的一些基本要素：初始概率分布 $\pi$ ，状态转移矩阵 A，观测量的概率分布 B，同时有两个状态，三种可能的观测值。
+
+现在，重点是要了解并解决HMM的三个问题。
+
+问题1，已知整个模型，我女朋友告诉我，连续三天，她下班后做的事情分别是：散步，购物，收拾。那么，根据模型，计算产生这些行为的概率是多少。
+
+问题2，同样知晓这个模型，同样是这三件事，我女朋友要我猜，这三天她下班后北京的天气是怎么样的。这三天怎么样的天气才最有可能让她做这样的事情。
+
+问题3，最复杂的，我女朋友只告诉我这三天她分别做了这三件事，而其他什么信息我都没有。她要我建立一个模型，晴雨转换概率，第一天天气情况的概率分布，根据天气情况她选择做某事的概率分布。（惨绝人寰）
+
+问题1的解决1：遍历算法。要计算产生这一系列行为的概率，那我们把每一种天气情况下产生这些行为都罗列出来，那每种情况的和就是这个概率。有三天，每天有两种可能的天气情况，则总共有 2的三次=8种 情况.
+
+举例其中一种情况：
+ P（下雨，下雨，下雨，散步，购物，收拾）=P（第一天下雨）P（第一天下雨去散步）P（第二天接着下雨）P（下雨去购物）P（第三天还下雨）P（下雨回家收拾）=0.6X0.1X0.7X0.4X0.7X0.5=0.00588当然，这里面的 P（第二天接着下雨）当然是已知第一天下雨的情况下，第二天下雨的概率，为0.7.将八种情况相加可得，三天的行为为{散步，购物，收拾}的可能性为0.033612. 看似简单易计算，但是一旦观察序列变长，计算量就会非常庞大（的复杂度，T 为观测序列的长度）。
+
+
+
+
+
+
 
 ** 迁移学习
+** 因子分解机
+
+一般会用“线性模型 + 人工特征组合” 引入非线性的模式训练 LR 模型。 一般会用人工方法对特征进行筛选，但是因子分解机也可以自动化地组合筛选交叉特征。
+
+因子分解机在这里的优势在于当遇到大规模稀疏特征时，模型的泛化能力也减弱，原因在于此时，满足交叉项不为0 的样本将非常少，当训练样本不足时，很容易导致参数训练不充分而不准确，最终影响模型的效果。但是因子分解机也可以很好地解决这个问题，通过将交叉特征系数做分解，让不同的交叉项之间不再独立，因此一个交叉项的数据可以辅助来估计另一个交叉项，这样做的好处在于可以让估计系数远远小于直接在线性模型中整合二阶交叉特征。
+
+这里的分解机的参数个数为1+n+kn, 而整合后的二阶交叉的线性模型的系数个数为 $1+n+n^2$. 所以，看出当n 非常大时，训练分解机模型在存储空间及迭代速度上是非常有优势的。
+
 ** 不平衡数据分类算法
 *** SMOTE
 
+
 ** 10 主题学习
+*** 联邦学习
+
+根据建模参与方之间的数据分布不同，把联邦学习分为三类：横向联邦学习，纵向联邦学习、联邦迁移学习。
+
+横向联邦学习：特征重叠多，用户重叠少，可以进行样本联合，横向联邦学习适用于参与者业态相同但触达客户不同，即特征重叠多，用户重叠少时的场景，比如不同地区的银行间，他们的业务相似，但用户不同（样本不同）。
+
+步骤：
+
+1.参与方各自从服务器A下载最新模型；
+
+2.每个参与方利用本地数据训练模型，加密梯度上传给服务器A，服务器A聚合各用户的梯度更新模型参数；
+
+3. 服务器A返回更新后的模型给各参与方；
+
+4.各参与方更新各自模型。
+
 ** 变量选择
 
 - 绕封法：不断增加或删除预测变量，通过评估包含不同变量的模型找到最优的变量组合。
